@@ -11,7 +11,8 @@ PLG_TINY_FIELD_LABEL_ADVANCEDPARAMS="Advanced parameters"
 PLG_TINY_FIELD_NAME_EXTENDED_LABEL="<strong>Extended Mode Options</strong><br />These options only apply in Extended mode."
 
 ; Tinymce.php string
-PLG_TINY_ERR_CUSTOMCSSFILENOTPRESENT="Could not find the file 'editor.css' in the template or templates/system folder. No styles are available."
+PLG_TINY_ERR_CUSTOMCSSFILENOTPRESENT="The file name %s was entered in the TinyMCE Custom CSS field. This file could not be found in the default template folder. No styles are available."
+PLG_TINY_ERR_EDITORCSSFILENOTPRESENT="Could not find the file 'editor.css' in the template or templates/system folder. No styles are available."
 
 ; Tinymce.xml strings
 PLG_TINY_FIELD_ADVIMAGE_DESC="Turn on/off a more advanced image dialog"
